<resources>
    <string name="app_name">meivsm</string>


    <!--    Text für "Weiter" Buttons in der ganzen App-->
    <string name="global_btn_next">Weiter</string>
    <string name="global_btn_create">Erstellen</string>
    <string name="global_btn_done">Fertig</string>
    <string name="global_btn_cancel">Abbrechen</string>
    <string name="global_btn_update">Ändern</string>
    <string name="global_btn_delete">Löschen</string>
    <string name="global_btn_pay">Bezahlen</string>
    <string name="global_btn_back">Zurück</string>

    <string name="global_contract_created">Erfolgreich ersteltl!</string>
    <string name="global_contract_created_desc">
        Du kannst den Vertrag unter "Meine Veträge" einsehen.
    </string>

    <!--    Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_contracts">Meine Vertäge</string>

    <!--    Home Fragment -->
    <string name="home_choose">Auswählen</string>
    <string name="home_header">Vertragstyp auswählen</string>
    <string name="home_crowdfunding">Crowdfunding</string>

    <!--    Crowdfunding Erzeugung-->
    <string name="activity_crowdfunding">Crowdfunding</string>

    <string name="crowdfunding_creation_header">Crowdfunding Vertrag</string>
    <string name="crowdfunding_creation_subheader">Vertragsdaten eintragen</string>

    <string name="crowdfunding_actionbar_header">Crowdfunding Vertrag</string>

    <string name="crowdfunding_title">Projektbezeichnung</string>
    <string name="crowdfunding_goal">Zielpreis</string>
    <string name="crowdfunding_end_date">Enddatum (im Format DD.MM.YYYY)</string>
    <string name="crowdfunding_receiver">Empfänger</string>
    <string name="crowdfunding_creating">Crowdfunding Smart Contract wird erstellt</string>
    <string name="crowdfunding_creating_desc">
        Der Smart Contract wird erstellt. Dies kann bis zu einer Minute dauern.
    </string>
    <string name="crowdfunding_created">
        Deine Projektfinanzierung ist nun auf der Blockchain verfügbar.
    </string>

    <string-array name="eth_units_array">
        <item>Ether</item>
        <item>Wei</item>
    </string-array>

    <!-- Accounts Fragment-->
    <string name="accounts_header">Mein Konto</string>
    <string name="accounts_welcome_msg">Hallo %1$s</string>
    <string name="accounts_welcome_default">:(</string>
    <string name="accounts_balance_header">Dein Kontostand</string>
    <string name="accounts_balance">%1$s %2$s</string>
    <string name="account_pub_addr_label">Deine öffentliche Adresse</string>
    <string name="accounts_desc">
        Verknüpfen Sie die App mit einem Ethereum Konto. Sie erhalten die Möglichkeit bei der
        Smart Contract Erzeugung direkt eine Adresse auszuwählen, den Kontostand abzufragen und
        Sie können mit Smart Contracts kommunizieren.
    </string>
    <string name="accounts_btn_create">Konto erstellen. Hier drücken</string>

    <string name="contacts_header">Kontakte</string>
    <string name="contacts_desc">
        Keine Kontakte bisher eingetragen. Kontakte  sind öffentliche Adressen anderer
        Vertragspersonen. Während ein Konto mit einem Etherum
        Account verknüpft ist, besteht ein Kontakt nur aus einer öffentlchen Adresse (wie die IBAN)
    </string>
    <string name="contact_btn_create">Kontakt hinzufügen. Hier drücken</string>
    <!-- Contact Manage Fragment-->
    <string name="contact_add_header">Kontakt hinzufügen</string>
    <string name="contact_manage_header">Kontakt verwalten</string>
    <string name="contact_created">Kontakt wurde erstellt</string>
    <string name="contact_changed">Kontakt wurde geändert</string>
    <string name="contact_delete">Kontakt löschen</string>
    <string name="contact_deleted">Kontakt wurde gelöscht</string>


    <!-- Accounts Creation Fragment-->
    <string name="eoa_creation_header">Konto erstellen</string>
    <string name="eoa_name">Name</string>
    <string name="eoa_name_desc">Name des Accounts (Assoziation mit einer Adresse)</string>
    <string name="eoa_pub_addr">Öffentliche Addresse</string>
    <string name="eoa_pub_addr_desc">Öffentliche Addresse des Ethereum Accounts</string>
    <string name="eoa_priv_key">Private Addresse des Ethereum Accounts</string>
    <string name="eoa_priv_key_desc">Zum Signieren der Nachrichten benötigt</string>
    <string name="eoa_created">Konto wurde erstellt</string>
    <!-- Accounts Manage Fragment-->
    <string name="eoa_manage_header">Konto verwalten</string>
    <string name="eoa_updated">Konto wurde aktualisiert</string>
    <string name="eoa_delete">Konto löschen</string>
    <string name="eoa_deleted">Konto wurde gelöscht</string>


    <!-- (My)Contracts Fragment-->
    <string name="contracts_header">Meine Verträge</string>

    <!-- Crowdfunding Contract Interaction -->
    <string name="crowdfunding_header">Crowdfunding</string>
    <string name="crowdfunding_sum_to_goal">%1$s / %2$s Ether erhalten</string>
    <string name="crowdfunding_active_till_end_date">Läuft noch bis zum %1$s</string>
    <string name="crowdfunding_ended_on_date">Geendet am %1$s</string>
    <string name="crowdfunding_started_date">Gestartet am %1$s</string>
    <string name="crowdfunding_pay_btn">Am Projekt beteiligen</string>
    <string name="crowdfunding_successful">Projekt erfogleichreich finanziert</string>
    <string name="crowdfunding_successful_desc">
        Das Kapital wird an die im Smart Contract hinterlegte Adresse überwiesen
    </string>
    <string name="crowdfunding_failed">Projektfinanzierung fehlgeschlagen</string>
    <string name="crowdfunding_failed_desc">Das Projekt konnte leider nicht im angegebenen Zeitraum erfolgreich finanziert werden</string>
    <string name="crowdfunding_pay_desc">Gib einen Betrag an, mit dem du dich am Projekt beteiligen möchtest</string>
    <string name="crowdfunding_pay_value">Betrag</string>
    <string name="crowdfunding_pay_value_hint">Preis</string>


    <!-- Transactions -->
    <string name="trans_doing">Transaktion wird durchgeführt</string>
    <string name="trans_doing_desc">Transaktion wird durchgeführt. Hab einen Moment Geduld.</string>
    <string name="trans_done">Transaktion abgeschlossen</string>
    <string name="trans_done_desc">
        Beachte, dass dein gezahlter Betrag erst nach Bestätigung eines Blocks in der Blockchain-Netzwerks sichtbar ist.
    </string>


    <!-- ERRORS-->
    <string name="error">Es ist ein Fehler aufgetreten</string>
    <string name="error_noaccounts">Kein Konto gefunden. Erstelle ein Konto, um fortzufahren</string>
    <string name="error_invalid_number">Kein gültiger Betrag. Mind. %1$d, max. %2$d Stellen</string>

    <string name="hello_blank_fragment">adasdasdas</string>

</resources>
