<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="fragment" type="com.aveyon.meivsm.ui.accounts.AccountManageFragment"/>
        <variable name="viewModel" type="com.aveyon.meivsm.ui.accounts.AccountsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.accounts.contacts.ContactManageFragment">

        <!-- Text attributes like in account  creation fragment-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/eoa_name"
            app:errorEnabled="true"
            app:helperText="@string/eoa_name_desc"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:isRegularName="@{viewModel.accountToUpdate.name}"
            app:layout_constrainedWidth="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="spread">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage|textAutoComplete"
                android:text="@={viewModel.accountToUpdate.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Text attributes like in account  creation fragment-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_pub_addr_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/eoa_pub_addr"
            app:helperText="@string/eoa_pub_addr_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contact_pub_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.accountToUpdate.publicAddress}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eoa_priv_key_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/eoa_priv_key"
            app:helperText="@string/eoa_priv_key_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_pub_addr_label">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewModel.accountToUpdate.privateKey}"
                android:id="@+id/eoa_priv_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/eoa_delete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:onClick="@{() -> fragment.onAccountDelete()}"
            android:text="@string/eoa_delete"
            android:textColor="#DF2925"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/eoa_creation_done"
            android:layout_width="@dimen/global_btn_width"
            android:layout_height="@dimen/global_btn_height"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> fragment.onAccountUpdate()}"
            android:text="@string/global_btn_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eoa_delete" />

        <Button
            android:id="@+id/eoa_creation_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/global_btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eoa_creation_done" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>